--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0"
+    "@babel/core": "^7.6.0",
+    "cssnano": "^4.1.10"
   }
 }
